--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-Dashboard
+<div class="card">
+    <div class="card-header">
+        <div class="card-title">Dashboard</div>
+    </div>
+    <div class="card-body">
+        <div class="btns-group">
+            <button class="btn btn-secondary"><i class="pi pi-file-import"></i>Import CSV</button>
+            <button class="btn btn-secondary"><i class="pi pi-file-export"></i>Export CSV</button>
+            <button class="btn btn-danger">Delete All Customers</button>
+        </div>
+    </div>
+</div>
