--- a/src/app/modules/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/sidebar/sidebar.component.html
@@ -15,3 +15,13 @@
       </div> -->
     </div>
   </div>
+  
+<p-confirmDialog #cd [style]="{width: '25vw'}">
+    <ng-template pTemplate="header">
+        <p class="title">Logout</p>
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <button class="btn btn-secondary" (click)="cd.reject()">Cencel</button>
+        <button class="btn btn-primary" (click)="cd.accept()">Confirm</button>
+    </ng-template>
+</p-confirmDialog>
