--- a/src/app/modules/statistics/statistics/statistics.component.html
+++ b/src/app/modules/statistics/statistics/statistics.component.html
@@ -6,7 +6,7 @@
     
     <div class="card-body">
         <div class="row g-3 mb-4">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG base</p>
@@ -23,16 +23,13 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                    
                         </div>
                     </div>
                 </div>
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG Lathe</p>
@@ -47,16 +44,13 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                         
                         </div>
                     </div>
                 </div>
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG 4D</p>
@@ -71,16 +65,13 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG Wire2D</p>
@@ -95,16 +86,13 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                          
                         </div>
                     </div>
                 </div>
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG Wire3D</p>
@@ -119,16 +107,13 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
                 
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="card h-100 counter">
                     <div class="card-header">
                         <p class="title">FROG XXX</p>
@@ -143,10 +128,7 @@
                                 <div class="data-title">App Denied Access</div>
                                 <div class="data-value">36</div>
                             </div>
-                            <div class="item">
-                                <div class="data-title">Downloads</div>
-                                <div class="data-value">1200</div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -167,6 +149,31 @@
                     <tr>
                         <th>Unknown PCID</th>
                         <th>Attempt to Access</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td>## ## ## ## ## ##</td>
+                        <td>##</td>
+                    </tr>
+                </ng-template>
+
+            </p-table>
+        </div>
+    </div>
+</div>
+
+<div class="card mt-4">
+    <div class="card-header">
+        <div class="title">App Downloads</div>
+    </div>
+    <div class="card-body">
+        <div class="app-table">
+            <p-table [value]="products">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>App</th>
+                        <th>Downloads</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-product>
