--- a/src/app/modules/customer/customer/customer.component.html
+++ b/src/app/modules/customer/customer/customer.component.html
@@ -121,7 +121,7 @@
       </div>
       <div class="text-end btns-group">
         <button type="button" class="btn btn-secondary" (click)="addcustomer = false">Cancel</button>
-        <button type="button" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-primary" (click)="showToaster()">Save</button>
       </div>
 </p-dialog>
 
@@ -201,3 +201,5 @@
         <button class="btn btn-primary" (click)="cd.accept()">Confirm</button>
     </ng-template>
 </p-confirmDialog>
+
+<p-toast></p-toast>
